--- a/Potatso.conf
+++ b/Potatso.conf
@@ -2066,5 +2066,4 @@ ruleSets:
   - IP-CIDR,221.179.183.0/24,REJECT
   - IP-CIDR,221.179.191.0/24,REJECT
 # Other
-  - FINAL,Proxy
-
+  - GEOIP,CN,DIRECT
