--- a/AD.conf
+++ b/AD.conf
@@ -8,7 +8,7 @@ ipv6 = true
 dns-server = 8.8.8.8,208.67.220.220,223.5.5.5,210.188.224.10,210.188.224.11,119.29.29.29
 
 [Proxy]
-us = custom,192.168.1.1,1080,aes-128-cfb,m,http://cdn.abclite.cn/SSEncrypt.module
+us = custom,192.168.1.1,1080,aes-128-cfb,m,http://bit.ly/2oUxzas
 
 
 [Proxy Group]
